--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,6 @@
 <ul class="main-navigation">
-  <li><a href="{{ root_url }}/">Blog</a></li>
-  <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+  <li><a href="{{ root_url }}/">主页 | Blog</a></li>
+  <li><a href="{{ root_url }}/blog/archives">文章归档 | Archives</a></li>
+  <li><a href="{{ root_url }}/aboutme">关于我 | About Me</a></li>
 </ul>
+2014 是最重要的一年，Fighting!
